kubernetes/script/apisix/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver-ingress
  namespace: atai-encrypt
spec:
  # apisix-ingress-controller is only interested in Ingress
  # resources with the matched ingressClass name, in our case,
  # it's apisix.
  ingressClassName: apisix
  rules:
  - host: test.atai
    http:
      paths:
      - backend:
          service:
            name: turnright-vuepc-v4 
            port:
              number: 80
        path: /
        pathType: Prefix
